--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <h1>Let's work with an API!</h1>
+    <main></main>
+
     <script type="module" defer src="index.js"></script>
   </body>
 </html>
