--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <main class="main-container" data-js="main"></main>
+
     <script type="module" defer src="index.js"></script>
   </body>
 </html>
